--- a/css/theme.css
+++ b/css/theme.css
@@ -7,8 +7,8 @@ html {
   overflow-x: hidden; }
 
 body {
-  background: #f1f1f1;
-  font-family: "Lato", sans-serif; }
+  background: #fff;
+  font-family: "PT Sans", sans-serif; }
 
 ul li {
   list-style: none; }
@@ -43,8 +43,8 @@ a {
   vertical-align: middle; }
 
 .btn-fill {
-  background: #2d2d2d;
-  border: 2px solid #2d2d2d;
+  background: #f88fb5;
+  border: 2px solid #f88fb5;
   color: #fff;
   -webkit-transition: all 0.4s ease-out;
   -moz-transition: all 0.4s ease-out;
@@ -84,196 +84,27 @@ a {
   margin: 0 auto; }
 
 .tcolor {
-  color: #2d2d2d !important; }
-
-.label {
-  background: #477D8C;
-  color: #fff;
-  font-size: 12px;
-  font-weight: 700;
-  padding: 5px 8px;
-  text-align: center;
-  text-transform: uppercase; }
-  .label:hover {
-    background: #477D8C;
-    color: #fff; }
+  color: #f88fb5 !important; }
 
 .header {
   background: #fff; }
-  .header .logo-social {
-    position: relative; }
-    .header .logo-social .header-left-icon ul li, .header .logo-social .header-right-icon ul li {
-      display: inline-block; }
-      .header .logo-social .header-left-icon ul li a, .header .logo-social .header-right-icon ul li a {
-        cursor: pointer;
-        font-size: 16px;
-        padding: 5px 8px; }
-    .header .logo-social .header-left-icon .header-sidebar, .header .logo-social .header-right-icon .header-sidebar {
-      position: absolute;
-      clear: both; }
-      .header .logo-social .header-left-icon .header-sidebar a, .header .logo-social .header-right-icon .header-sidebar a {
-        color: #757575;
-        cursor: pointer;
-        font-size: 22px; }
-      .header .logo-social .header-left-icon .header-sidebar .sidebar-body, .header .logo-social .header-right-icon .header-sidebar .sidebar-body {
-        position: absolute;
-        top: 60px;
-        width: 470px;
-        height: 150px;
-        background: #f1f1f1;
-        box-shadow: 0 1px 2px #ddd;
-        z-index: 20; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .close, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .close {
-          width: 50px;
-          height: 50px;
-          background: #fff;
-          border: 1px solid #b5b5b5;
-          border-radius: 50%;
-          box-shadow: 0 0 10px #ddd;
-          font-size: 23px;
-          font-weight: 300;
-          line-height: 45px;
-          opacity: 1;
-          text-align: center;
-          position: absolute;
-          top: -28px;
-          right: -25px; }
-      .header .logo-social .header-left-icon .header-sidebar .active, .header .logo-social .header-right-icon .header-sidebar .active {
-        cursor: default; }
-    .header .logo-social .header-right-icon #search .modal-content {
-      height: 225px;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-      -ms-border-radius: 0;
-      border-radius: 0;
-      background-clip: padding-box;
-      opacity: 0.9;
-      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-      filter: alpha(opacity=90); }
-      .header .logo-social .header-right-icon #search .modal-content .modal-header {
-        border: 0; }
-      .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group .form-control {
-        border: 0;
-        border-bottom: 1.5px solid #000;
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        -ms-border-radius: 0;
-        border-radius: 0;
-        background-clip: padding-box; }
-        .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group .form-control.placeholder {
-          font-size: 12px; }
-        .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group .form-control:-moz-placeholder {
-          font-size: 12px; }
-        .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group .form-control::-webkit-input-placeholder {
-          font-size: 12px; }
-        .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group .form-control:focus {
-          box-shadow: none; }
-      .header .logo-social .header-right-icon #search .modal-content .modal-body .input-group button {
-        background: transparent;
-        border: 0;
-        border-bottom: 1.5px solid #000;
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        -ms-border-radius: 0;
-        border-radius: 0;
-        background-clip: padding-box; }
   .header .menu {
     height: 50px;
-    border-top: 1px solid #b5b5b5;
-    border-bottom: 1px solid #b5b5b5;
     line-height: 32px; }
     .header .menu .navbar {
       padding: 0; }
       .header .menu .navbar .navbar-nav .nav-item .nav-link {
-        color: #000;
+        color: #333;
+        cursor: pointer;
         font-size: 14px;
         font-weight: 600;
-        padding-right: 25px;
-        padding-left: 25px;
-        text-transform: uppercase; }
-      .header .menu .navbar .navbar-nav .nav-item .dropdown-menu {
-        top: 47px;
-        border: 0;
-        border-radius: 0;
-        padding: 0; }
-        .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li {
-          padding: 0 18px; }
-          .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li a {
-            color: #000;
-            font-size: 13px;
-            text-align: center; }
-          .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li:hover {
-            background: #4F7D8E;
-            cursor: pointer; }
-            .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li:hover a {
-              color: #fff; }
-      .header .menu .navbar .navbar-nav .nav-item:hover {
-        background: #477D8C;
-        -webkit-transition: all 0.5s ease;
-        -moz-transition: all 0.5s ease;
-        -ms-transition: all 0.5s ease;
-        -o-transition: all 0.5s ease;
-        transition: all 0.5s ease; }
-        .header .menu .navbar .navbar-nav .nav-item:hover .nav-link {
-          color: #fff; }
+        padding-right: 15px;
+        padding-left: 15px;
+        text-transform: capitalize; }
+      .header .menu .navbar .navbar-nav .nav-item .active {
+        color: #9e9e9e; }
 
 /* CSS For Home Slider Section */
-.home-slider #main-slider .slider-text-right {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0000008a;
-  cursor: pointer; }
-  .home-slider #main-slider .slider-text-right span {
-    position: absolute;
-    top: 75px;
-    right: 35px;
-    width: 45%;
-    color: #fff;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: right; }
-  .home-slider #main-slider .slider-text-right .post-info-text {
-    position: absolute;
-    bottom: 20px;
-    right: 35px;
-    color: #fff;
-    font-size: 15px;
-    text-align: right; }
-    .home-slider #main-slider .slider-text-right .post-info-text p {
-      margin: 0; }
-.home-slider #main-slider .slider-text-left {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0000008a;
-  cursor: pointer; }
-  .home-slider #main-slider .slider-text-left span {
-    position: absolute;
-    top: 75px;
-    left: 35px;
-    width: 45%;
-    color: #fff;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: left; }
-  .home-slider #main-slider .slider-text-left .post-info-text {
-    position: absolute;
-    bottom: 20px;
-    left: 35px;
-    color: #fff;
-    font-size: 15px;
-    text-align: left; }
-    .home-slider #main-slider .slider-text-left .post-info-text p {
-      margin: 0; }
 .home-slider #main-slider .owl-nav .owl-prev, .home-slider #main-slider .owl-nav .owl-next {
   position: absolute;
   top: 43%;
