--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1,9 +1,9 @@
 
 // Custom Fonts
-// @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+// @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 
-$theme-font: 'Lato', sans-serif;
-$theme-color:#2d2d2d;
+$theme-font: 'PT Sans', sans-serif;
+$theme-color:#f88fb5;
 $bcolor:#000;
 $wcolor:#fff;
 $gcolor:#9e9e9e;
@@ -117,7 +117,7 @@ $gcolor:#9e9e9e;
 html {overflow-x: hidden;}
 
 body {
-	background: #f1f1f1;
+	background: #fff;
     font-family:$theme-font;
   	// overflow-x: hidden;
 }
@@ -196,166 +196,31 @@ a{
 
 .tcolor{color:$theme-color !important;}
 
-.label{
-	background: #477D8C;
-    color: $wcolor;
-    font-size: 12px;
-    font-weight: 700;
-    padding: 5px 8px;
-    text-align: center;
-    text-transform: uppercase;
-
-    &:hover{
-    	background: #477D8C;
-    	color:$wcolor;
-    }
-}
-
 
 // CSS For Header Section
 
 .header{
 	background: $wcolor;
-	.logo-social{
-	    position: relative;
-		.header-left-icon{
-			ul{
-				li{
-					display: inline-block;
-					a{
-						cursor: pointer;
-						font-size: 16px;
-    					padding: 5px 8px;
-					}
-				}
-			}
-
-			.header-sidebar{
-				position: absolute;
-    			clear: both;
-				a{
-					color: #757575;
-				    cursor: pointer;
-				    font-size: 22px;
-				}
-
-				.sidebar-body{
-					position: absolute;
-    				top: 60px;
-					width:470px;
-	    			height:150px;
-					background: #f1f1f1;
-				    box-shadow: 0 1px 2px #ddd;
-				    z-index: 20;
-
-				    .close{
-				    	width: 50px;
-					    height: 50px;
-					    background: $wcolor;
-					    border: 1px solid #b5b5b5;
-					    border-radius: 50%;
-					    box-shadow: 0 0 10px #ddd;
-					    font-size: 23px;
-					    font-weight: 300;
-					    line-height: 45px;
-					    opacity: 1;
-					    text-align: center;
-					    position: absolute;
-					    top: -28px;
-					    right: -25px;
-				    }
-				}
-
-				.active{cursor: default;}
-			}
-		}
-
-		.header-right-icon{
-			@extend .header-left-icon;
-
-			#search{
-				.modal-content{
-					height: 225px;
-				    @include border-radius(0);
-				    @include opacity(0.9);
-					.modal-header{
-						border:0;
-					}
-
-					.modal-body{
-						.input-group{
-							.form-control{
-								border: 0;
-							    border-bottom: 1.5px solid $bcolor;
-							    @include border-radius(0);
-
-							    @include placeholder{
-							    	font-size:12px;
-							    }
-
-							    &:focus{box-shadow: none;}
-							}
-
-							button{
-								background: transparent;
-							    border: 0;
-							    border-bottom: 1.5px solid $bcolor;
-							    @include border-radius(0);
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+	
 
     .menu{
 	    height: 50px;
-	    border-top: 1px solid #b5b5b5;
-	    border-bottom: 1px solid #b5b5b5;
 	    line-height: 32px;
     	.navbar{
     		padding: 0;
     		.navbar-nav{
     			.nav-item{
     				.nav-link{
-    					color: #000;
+    					color: #333;
+    					cursor: pointer;
 					    font-size: 14px;
 					    font-weight: 600;
-					    padding-right: 25px;
-					    padding-left: 25px;
-					    text-transform: uppercase;
+					    padding-right: 15px;
+					    padding-left: 15px;
+					    text-transform: capitalize;
     				}
 
-    				.dropdown-menu{
-    					top: 47px;
-					    border: 0;
-					    border-radius: 0;
-					    padding: 0;
-
-					    li{
-					    	padding:0 18px;
-
-					    	a{
-					    		color:$bcolor;
-					    		font-size: 13px;
-    							text-align: center;
-					    	}
-
-					    	&:hover{
-					    		background: #4F7D8E;
-					    		cursor: pointer;
-
-					    		a {color:$wcolor;}
-					    	}
-					    }
-    				}
-
-    				&:hover{
-					    background: #477D8C;
-					    @include transition(all,.5s,ease);
-					    .nav-link{color: $wcolor;}
-    				}
+    				.active{color:$gcolor;}
     			}
     		}
     	}
@@ -368,73 +233,7 @@ a{
 
 .home-slider{
 	#main-slider{
-		.slider-text-right{
-			position: absolute;
-		    top: 0;
-		    right: 0;
-		    left: 0;
-		    width: 100%;
-		    height: 100%;
-		    background: #0000008a;
-		    cursor: pointer;
-
-		    span{
-		    	position: absolute;
-		        top: 75px;
-			    right: 35px;
-			    width: 45%;
-			    color: #fff;
-			    font-size: 50px;
-			    font-weight: 700;
-			    line-height: 60px;
-			    text-align: right;
-		    }
-
-		    .post-info-text{
-		    	position: absolute;
-			    bottom: 20px;
-			    right: 35px;
-			    color: $wcolor;
-			    font-size: 15px;
-			    text-align: right;
-
-			    p {margin: 0;}
-		    }
-		}
-
-		.slider-text-left{
-			position: absolute;
-		    top: 0;
-		    right: 0;
-		    left: 0;
-		    width: 100%;
-		    height: 100%;
-		    background: #0000008a;
-		    cursor: pointer;
-
-		    span{
-		    	position: absolute;
-		        top: 75px;
-			    left: 35px;
-			    width: 45%;
-			    color: $wcolor;
-			    font-size: 50px;
-			    font-weight: 700;
-			    line-height: 60px;
-			    text-align: left;
-		    }
-
-		    .post-info-text{
-		    	position: absolute;
-			    bottom: 20px;
-			    left: 35px;
-			    color: $wcolor;
-			    font-size: 15px;
-			    text-align: left;
-
-			    p {margin: 0;}
-		    }
-		}
+		
 		.owl-nav{
 			.owl-prev{
 				position: absolute;
