--- a/css/theme.css
+++ b/css/theme.css
@@ -104,33 +104,98 @@ a {
         text-transform: capitalize; }
       .header .menu .navbar .navbar-nav .nav-item .active {
         color: #9e9e9e; }
+      .header .menu .navbar .navbar-nav .nav-item #search .modal-content {
+        height: 155px;
+        border: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        border-radius: 0;
+        background-clip: padding-box;
+        opacity: 0.9;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+        filter: alpha(opacity=90); }
+        .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group .form-control {
+          border: 0;
+          border-bottom: 1.5px solid #000;
+          -webkit-border-radius: 0;
+          -moz-border-radius: 0;
+          -ms-border-radius: 0;
+          border-radius: 0;
+          background-clip: padding-box; }
+          .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group .form-control.placeholder {
+            font-size: 12px; }
+          .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group .form-control:-moz-placeholder {
+            font-size: 12px; }
+          .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group .form-control::-webkit-input-placeholder {
+            font-size: 12px; }
+          .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group .form-control:focus {
+            box-shadow: none; }
+        .header .menu .navbar .navbar-nav .nav-item #search .modal-content .modal-body .input-group button {
+          background: transparent;
+          border: 0;
+          border-bottom: 1.5px solid #000;
+          -webkit-border-radius: 0;
+          -moz-border-radius: 0;
+          -ms-border-radius: 0;
+          border-radius: 0;
+          background-clip: padding-box; }
 
 /* CSS For Home Slider Section */
 .home-slider #main-slider {
   position: relative;
   background: #f6f7fb; }
-  .home-slider #main-slider .owl-dots .owl-dot {
-    width: 35px;
-    height: 35px;
+  .home-slider #main-slider .slider-text .date {
+    font-size: 14px;
+    font-weight: 400; }
+    .home-slider #main-slider .slider-text .date a {
+      color: #f88fb5;
+      letter-spacing: 0.5px; }
+      .home-slider #main-slider .slider-text .date a:hover {
+        color: #333;
+        -webkit-transition: all 0.6s ease;
+        -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
+        -o-transition: all 0.6s ease;
+        transition: all 0.6s ease; }
+  .home-slider #main-slider .slider-text h5 a {
+    color: #333; }
+    .home-slider #main-slider .slider-text h5 a:hover {
+      color: #333; }
+  .home-slider #main-slider .slider-text .description {
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    line-height: 30px; }
+  .home-slider #main-slider .owl-dots {
+    width: 10%;
     display: block;
-    border-radius: 100%;
-    background: #f2f2f2;
-    float: left;
-    margin-right: 10px;
-    position: relative; }
-    .home-slider #main-slider .owl-dots .owl-dot .active {
-      background: transparent;
-      border: 1px solid #f88fb5; }
-      .home-slider #main-slider .owl-dots .owl-dot .active span {
-        width: 20px;
-        height: 20px;
-        display: block;
-        left: 7px;
-        top: 7px;
-        position: absolute;
-        margin: auto;
-        background-color: #f88fb5 !important;
-        border-radius: 100%; }
+    position: absolute;
+    bottom: 200px;
+    right: 0; }
+    .home-slider #main-slider .owl-dots .owl-dot, .home-slider #main-slider .owl-dots .owl-dot span {
+      width: 35px;
+      height: 35px;
+      background: #f2f2f2;
+      border-radius: 100%;
+      display: block;
+      float: left;
+      margin-right: 10px;
+      position: relative; }
+      .home-slider #main-slider .owl-dots .owl-dot span {
+        margin: 0; }
+  .home-slider #main-slider .owl-dots .owl-dot.active, .home-slider #main-slider .owl-dots .owl-dot span.active {
+    background-color: transparent;
+    border: 1px solid #f88fb5; }
+    .home-slider #main-slider .owl-dots .owl-dot.active span, .home-slider #main-slider .owl-dots .owl-dot span.active span {
+      width: 20px;
+      height: 20px;
+      display: block;
+      left: 7px;
+      top: 7px;
+      position: absolute;
+      margin: auto;
+      background-color: #f88fb5;
+      border-radius: 100%; }
 
 /* CSS For Blog Post Section */
 .blog-wrapper {
