--- a/css/theme.css
+++ b/css/theme.css
@@ -199,67 +199,38 @@ a {
 
 /* CSS For Blog Post Section */
 .blog-wrapper {
-  width: 80%;
+  width: 85%;
   margin: 0 auto; }
-  .blog-wrapper .main-content .post {
-    position: relative;
-    background: #fff;
-    -moz-box-shadow: 0 0 2px #ddd;
-    -webkit-box-shadow: 0 0 2px #ddd;
-    box-shadow: 0 0 2px #ddd; }
-    .blog-wrapper .main-content .post .post-photo {
-      height: 300px;
-      overflow: hidden;
-      position: relative; }
-      .blog-wrapper .main-content .post .post-photo img {
-        max-width: none;
-        width: calc(100% + 50px);
-        opacity: 1;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-        filter: alpha(opacity=100);
+  .blog-wrapper .main-content .post-category .text .category-date {
+    font-size: 13px; }
+    .blog-wrapper .main-content .post-category .text .category-date a {
+      color: #f88fb5; }
+      .blog-wrapper .main-content .post-category .text .category-date a:hover {
+        color: #000;
         -webkit-transition: all 0.5s ease;
         -moz-transition: all 0.5s ease;
         -ms-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease; }
-    .blog-wrapper .main-content .post .post-text {
-      text-align: center; }
-      .blog-wrapper .main-content .post .post-text .post-title h2 {
-        font-weight: 600; }
-      .blog-wrapper .main-content .post .post-text .post-category label {
-        padding: 0 5px; }
-        .blog-wrapper .main-content .post .post-text .post-category label a {
-          color: #fff;
-          font-size: 12px; }
-      .blog-wrapper .main-content .post .post-text .post-info {
-        color: #757575;
-        font-size: 12px; }
-        .blog-wrapper .main-content .post .post-text .post-info a {
-          color: #757575; }
-      .blog-wrapper .main-content .post .post-text .post-description {
-        text-align: left; }
-      .blog-wrapper .main-content .post .post-text .post-footer a {
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        -ms-border-radius: 3px;
-        border-radius: 3px;
-        background-clip: padding-box;
-        padding: 8px;
-        text-transform: uppercase; }
-      .blog-wrapper .main-content .post .post-text .post-footer .post-button a {
-        font-size: 12px; }
-      .blog-wrapper .main-content .post .post-text .post-footer .post-share ul li {
-        display: inline-block; }
-    .blog-wrapper .main-content .post:hover .post-photo img {
-      opacity: 0.7;
-      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-      filter: alpha(opacity=70);
+  .blog-wrapper .main-content .post-category .text .title h4 a {
+    font-size: 19px; }
+    .blog-wrapper .main-content .post-category .text .title h4 a:hover {
+      color: #f88fb5;
       -webkit-transition: all 0.5s ease;
       -moz-transition: all 0.5s ease;
       -ms-transition: all 0.5s ease;
       -o-transition: all 0.5s ease;
-      transition: all 0.5s ease;
-      transform: translate3d(-40px, 0, 0); }
+      transition: all 0.5s ease; }
+  .blog-wrapper .main-content .post-category .text .social-link a {
+    font-size: 12px;
+    margin-right: 5px; }
+    .blog-wrapper .main-content .post-category .text .social-link a:hover {
+      color: #f88fb5;
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
   .blog-wrapper .side-content {
     position: sticky;
     top: 0; }
