--- a/css/theme.scss
+++ b/css/theme.scss
@@ -156,12 +156,12 @@ a{
 	background: $theme-color;
     border: 2px solid $theme-color;
     color: $wcolor;
-    @include transition(all,0.4s,ease-out);
 
     &:hover{
     	background: $bcolor;
     	border: 2px solid $bcolor;
     	color: $wcolor;
+      @include transition(all,0.5s,ease-in);
     }
 }
 
@@ -169,7 +169,7 @@ a{
 	background: transparent;
     border: 1px solid #b5b5b5;
     color: #757575;
-    @include transition(all,0.4s,ease-out);
+    @include transition(all,0.4s,ease-in);
 
     &:hover{
     	background: #757575;
@@ -351,35 +351,24 @@ a{
 	width: 85%;
   margin: 0 auto;
 
-    .main-content{
-    	.post-category{
-        .text{
-          .category-date{
-            font-size: 13px;
-            a{
-              color:$theme-color;
+  .main-content{
+  	.post-category{
+      .text{
+        .category-date{
+          font-size: 13px;
+          a{
+            color:$theme-color;
 
-              &:hover{
-                color:$bcolor;
-                @include transition(all,.5s,ease);
-              }
+            &:hover{
+              color:$bcolor;
+              @include transition(all,.5s,ease);
             }
           }
-          .title{
-            h4{
-              a{
-                font-size: 19px;
-                &:hover{
-                  color:$theme-color;
-                  @include transition(all,.5s,ease);
-                }
-              }
-            }
-          }
-          .social-link{
+        }
+        .title{
+          h4{
             a{
-              font-size: 12px;
-              margin-right: 5px;
+              font-size: 19px;
               &:hover{
                 color:$theme-color;
                 @include transition(all,.5s,ease);
@@ -387,105 +376,59 @@ a{
             }
           }
         }
+        .social-link{
+          a{
+            font-size: 12px;
+            margin-right: 5px;
+            &:hover{
+              color:$theme-color;
+              @include transition(all,.5s,ease);
+            }
+          }
+        }
       }
     }
+  }
 
-    .side-content{
-    	position: sticky;
-    	top: 0;
-    	.latest-post{
-    		background: $wcolor;
-    		box-shadow: 0 0 2px #ddd;
-
-    		.lpost-item{
-    			border-bottom: 1px solid #ddd;
-    			.lpost-photo{
-    				width: 100%;
-    			}
-
-    			.lpost-text{
-    				h6{
-    					a{
-    						&:hover{color:$bcolor;}
-    					}
-    				}
-
-    				time{
-					    color: #757575;
-					    font-size: 10px;
-					    text-transform: uppercase;
-    				}
-    			}
-    		}
-    	}
-
-    	.tag{
-    		background: $wcolor;
-    		box-shadow: 0 0 2px #ddd;
-
-    		.tag-link{
-    			a{
-    				display: inline-block;
-				    margin-top: 5px;
-				    padding: 3px 10px;
-				    text-transform: capitalize;
-    			}
-    		}
-    	}
-
-    	.instagram{
-    		background: $wcolor;
-    		box-shadow: 0 0 2px #ddd;
-
-    		.instagram-content{
-    			width: 95%;
-    			padding-left: 6px;
-
-    			.row{
-    				margin-bottom: 5px;
-	    			.col-4{
-	    				padding-right:0;
-	    				padding-left:10px;
-	    			}
-	    		}
-    		}
-    	}
-
-    	.category{
-    		background: $wcolor;
-    		box-shadow: 0 0 2px #ddd;
-
-    		.category-list{
-    			ul{
-    				li{
-    					border-bottom: 1px solid #ddd;
-    					a{
-						    color: $bcolor;
-						    display: block;
-						    font-size: 13px;
-						    margin-left: 15px;
-						    padding: 7px 0;
-						    text-transform: uppercase;
-
-						    span{
-						    	color:#757575;
-						    	margin-left: 15px;
-						    }
-
-						    &:before{
-						    	content:'';
-					    	    width: 5px;
-							    height: 5px;
-							    background: #757575;
-							    display: inline-block;
-						        margin: 0 10px 1px -14px;
-						    }
-	    				}
-    				}
-    			}
-    		}
-    	}
+  .side-content{
+    .header{
+      .hbar{
+        background: $theme-color;
+        width: 15%;
+        height: 1px;
+      }
     }
+    .profile{
+      background: #f6f7fb;
+    }
+    .recent-post{
+      .post-list{
+        ul{
+          li{
+            border-bottom: 1px solid #ddd;
+
+            .photo{width: 35%;}
+            .text{
+              margin-top: -5px;
+              a{
+                &:hover{
+                  color:$theme-color;
+                  @include transition(all,.5s,ease);
+                }
+              }
+
+              time {font-size: 13px;}
+            }
+          }
+        }
+      }
+    }
+    .instagram{
+      .col{
+        padding: 0;
+      }
+    }
+  }
 }
 
 // ************************************
