--- a/css/theme.scss
+++ b/css/theme.scss
@@ -10,6 +10,13 @@ $gcolor:#9e9e9e;
 
 // Start Sass Mixins
 
+@mixin animation($avalue) {
+  -webkit-animation: #{$avalue};
+  -moz-animation: #{$avalue};
+  -o-animation: #{$avalue};
+  animation: #{$avalue};
+}
+
 @mixin border-radius($radius) {
 	-webkit-border-radius: $radius;
 	-moz-border-radius: $radius;
@@ -37,6 +44,21 @@ $gcolor:#9e9e9e;
   -moz-box-shadow: $shadows;
   -webkit-box-shadow: $shadows;
   box-shadow: $shadows;
+}
+
+@mixin keyframes($aname) {
+  @-webkit-keyframes #{$aname} {
+    @content;
+  }
+  @-o-keyframes #{$aname} {
+    @content;
+  }
+  @-moz-keyframes #{$aname} {
+    @content;
+  }
+  @keyframes #{$aname} {
+    @content;
+  }
 }
 
 @mixin linear-gradient($sc,$sp,$ec,$ep:null) {
@@ -486,18 +508,51 @@ a{
 
 // CSS For Footer Section
 
+@include keyframes(pulse){
+  0%{
+    @include scale(1.0)
+  }
+
+  50%{
+    @include scale(0.9)
+  }
+
+  100%{
+    @include scale(1.0)
+  }
+}
+
 .footer{
-    height: 60px;
-    color: $bcolor;
+    // height: 60px;
+    background: $bcolor;
+    color: $wcolor;
     padding-top: 20px;
     text-align: center;
+
+    .social{
+      a{
+        width: 45px;
+        height: 45px;
+        border: 1px solid #4d4d4d;
+        border-radius: 50%;
+        color: #a5a4a4;
+        display: inline-block;
+        line-height: 45px;
+        margin-left: 10px;
+
+        &:hover{
+          @include animation('pulse 1s');
+          @include transition(all,0.3s,ease);
+        }
+      }
+    }
 
     p{
 	    font-size: 14px;
 	    font-weight: 400;
     	text-transform: capitalize;
 
-    	a{color:$bcolor;}
+    	a {color:$theme-color;}
     }
 }
 
