--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -22,8 +22,32 @@
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
 */
-@media only screen and (min-width: 1400px) and (max-width: 1920px) {
-  .blog-wrapper {
-    width: 60%; } }
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .header .navbar .navbar-toggler {
+    height: 40px;
+    border: 1px solid #ddd; }
+    .header .navbar .navbar-toggler:focus {
+      outline: 0; }
+    .header .navbar .navbar-toggler span {
+      width: 30px;
+      height: 2px;
+      background: #947878;
+      display: block;
+      margin-top: 7px; }
+  .header .navbar .navbar-collapse {
+    background: #ddd;
+    text-align: center;
+    z-index: 10; }
+
+  .home-slider #main-slider .slider-text .description {
+    text-align: justify; }
+  .home-slider #main-slider .owl-dots {
+    display: none; }
+
+  .blog-wrapper .side-content .recent-post .post-list ul li .text time {
+    display: block; }
+
+  .newsletter .news-gradient .news-form {
+    width: 95%; } }
 
 /*# sourceMappingURL=mediaqueries.css.map */
