--- a/css/theme.scss
+++ b/css/theme.scss
@@ -499,13 +499,6 @@ a{
 
 // ************************************
 
-// CSS For Footer Social Section
-
-
-
-// ************************************
-
-
 // CSS For Footer Section
 
 @include keyframes(pulse){
@@ -554,6 +547,48 @@ a{
 
     	a {color:$theme-color;}
     }
+}
+
+// ************************************
+
+// CSS For About Page
+
+.about{
+  width: 70%;
+  margin: 0 auto;
+}
+
+// ************************************
+
+
+// CSS For Tags Page
+
+.tag{
+  .tag-content{
+    width: 85%;
+    margin: 0 auto;
+
+    .tag-box{
+      .tag-title{
+        a{
+          font-size: 20px;
+          font-weight: 600;
+
+          &:hover{
+            color: $theme-color;
+            @include transition(all,.5s,ease);
+          }
+
+          span{
+            color:$gcolor;
+            &:hover{
+              color: $gcolor;
+            }
+          }
+        }
+      }
+    }
+  }  
 }
 
 // ************************************
