--- a/css/theme.css
+++ b/css/theme.css
@@ -103,7 +103,7 @@ a {
         padding-left: 15px;
         text-transform: capitalize; }
       .header .menu .navbar .navbar-nav .nav-item .active {
-        color: #9e9e9e; }
+        color: #9e9e9e !important; }
       .header .menu .navbar .navbar-nav .nav-item #search .modal-content {
         height: 155px;
         border: 0;
