--- a/css/theme.scss
+++ b/css/theme.scss
@@ -243,7 +243,7 @@ a{
 					    text-transform: capitalize;
     				}
 
-    				.active{color:$gcolor;}
+    				.active{color:$gcolor !important;}
 
             #search{
               .modal-content{
