--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -50,8 +50,10 @@
   .home-slider #main-slider .owl-dots {
     display: none; }
 
-  .blog-wrapper .side-content .recent-post .post-list ul li .text time {
-    display: block; }
+  .blog-wrapper {
+    width: 92%; }
+    .blog-wrapper .side-content .recent-post .post-list ul li .text time {
+      display: block; }
 
   .newsletter .news-gradient .news-form {
     width: 95%; }
@@ -59,8 +61,8 @@
   .instagram .instagram-content {
     padding-left: 0 !important; }
 
-  .blog-wrapper {
-    width: 92%; } }
+  .about {
+    width: 90%; } }
 @media only screen and (min-width: 481px) and (max-width: 767px) {
   .header .logo {
     float: left; }
@@ -87,10 +89,31 @@
     color: #f88fb5; }
 
   .home-slider #main-slider .owl-dots {
-    display: none; } }
+    display: none; }
+
+  .blog-wrapper {
+    width: 90%; }
+
+  .newsletter .news-gradient .news-form {
+    width: 80%; }
+
+  .about {
+    width: 90%; } }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .home-slider #main-slider .owl-dots {
     width: 15%;
-    bottom: 262px; } }
+    bottom: 262px; }
+
+  .newsletter .news-gradient .news-form {
+    width: 80%; }
+
+  .about {
+    width: 90%; } }
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+  .newsletter .news-gradient .news-form {
+    width: 80%; }
+
+  .about {
+    width: 85%; } }
 
 /*# sourceMappingURL=mediaqueries.css.map */
